[project]
name = "nyc-menin-buffer-zone"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "branca>=0.8.2",
    "folium>=0.20.0",
    "geopandas>=1.1.2",
    "numpy>=2.4.2",
    "osmnx>=2.1.0",
    "pandas>=3.0.1",
    "pyproj>=3.7.2",
    "requests>=2.32.5",
    "shapely>=2.1.2",
]
